@@ -66,6 +66,7 @@ body.cover div.subtitle {
 	border-top: .1em solid black;
 	padding-top: 40px;
 	margin-top: 40px;
+	margin-bottom: 0px;
 }
 body.cover div.authors {
 }
