@@ -39,6 +39,7 @@
   - Add Mac OS X Lion installation instructions. BZ# 979229
   - Add file handle limit workaround to FAQ BZ #952476
   - Support CDATA tags. BZ #958343
+  - Fix UTF8 image names getting mangled in publish. BZ #953618
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
